# dop-browser

./: .gitignore  Manifest.toml  Project.toml  README.md
.github/workflows/: compile-memo-app.yml  test-memo-app.yml
docs/: ACID2_SUPPORT.md  BINARY_SIZE_REDUCTION.md  CONTENT_MINUS_MINUS.md  CONTENT_RUST_MIGRATION.md  LAYOUT_ENGINE.md  LAYOUT_QUICKSTART.md  MATH_REFACTORING.md  MODULAR_ARCHITECTURE.md  PACKAGING.md  REFACTORING_SUMMARY.md  STATICCOMPILER_DISTRIBUTION_GUIDE.md  STATICCOMPILER_IMPLEMENTATION.md  STATICCOMPILER_READINESS.md
examples/: interactive_ui_examples.jl  layout_engine_examples.jl  memo_app.jl  onscreen_ui_example.jl  usable_memo_app.jl
rust/dop-content/: Cargo.toml
rust/dop-content-ir/: Cargo.toml
rust/dop-content-ir/src/: builder.rs  ffi.rs  lib.rs  primitives.rs  properties.rs  render.rs
rust/dop-content/src/: builder.rs  lib.rs  primitives.rs  properties.rs  render.rs
rust/dop-parser/: Cargo.toml
rust/dop-parser/src/: compiler.rs  css_parser.rs  ffi.rs  html_parser.rs  lib.rs  string_interner.rs
rust/dop-renderer/: Cargo.toml
rust/dop-renderer/src/: ffi.rs  lib.rs  renderer.rs  shader.wgsl  software.rs  text.rs  window.rs
scripts/: README.md  compile_memo_app.jl  precompile_memo_app.jl  render_acid2.jl  render_acid2_reference.jl  showcase.jl  static_compile_memo_app.jl  verify_compilation_setup.jl  verify_static_compilation_setup.jl
src/: CSSParser.jl  Core.jl  DOPBrowser.jl  LayoutArrays.jl  MemoAppMain.jl  NodeTable.jl  RenderBuffer.jl  StaticMemoMain.jl  TokenTape.jl
src/Application/: Application.jl  Utils.jl
src/CSSParser/: CSSCore.jl  CSSParserModule.jl
src/Compiler/: Compiler.jl
src/ContentIR/: ContentIR.jl  MathOps.jl  Properties.jl  StaticCore.jl
src/ContentMM/: Compiler.jl  ContentMM.jl  Environment.jl  HTMLLowering.jl  Macros.jl  MathOps.jl  NativeUI.jl  Primitives.jl  Properties.jl  Reactive.jl  Runtime.jl  SourceMap.jl  Styles.jl  TextJIT.jl  TextParser.jl
src/DOMCSSOM/: DOMCSSOM.jl  NodeTable.jl  RenderBuffer.jl  StyleArchetypes.jl
src/EventLoop/: EventLoop.jl
src/HTMLParser/: HTMLParser.jl  StringInterner.jl  TokenTape.jl
src/Layout/: FlexboxLayout.jl  GridLayout.jl  Layout.jl  LayoutArrays.jl  LayoutCache.jl
src/Network/: Network.jl
src/Pipeline/: Pipeline.jl
src/Renderer/: CairoRenderer.jl  GPURenderer.jl  PNGExport.jl  Renderer.jl  SoftwareRenderer.jl
src/RustContent/: RustContent.jl
src/RustParser/: RustParser.jl
src/RustRenderer/: RustRenderer.jl
src/State/: State.jl
src/Widgets/: Widgets.jl
src/Window/: Window.jl
test/: runtests.jl  test_layout_engine.jl  test_rust_content.jl  test_rust_windowing.jl
