[package]
name = "dop-parser"
version = "0.1.0"
edition = "2021"
description = "HTML/CSS parsers and Content IR compiler for DOP Browser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
html5ever = "0.29"
markup5ever = "0.14"
cssparser = "0.33"
zerocopy = { version = "0.8", features = ["derive"] }
tendril = "0.4"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[profile.release]
lto = true
opt-level = 3
