[package]
name = "dop-renderer"
version = "0.1.0"
edition = "2021"
description = "Rust-based rendering engine for DOP Browser using winit, wgpu and tiny-skia"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["software"]
software = ["tiny-skia", "softbuffer"]
gpu = []
# Minimal feature for smallest binary size (software rendering only)
minimal = ["tiny-skia"]

[dependencies]
winit = "0.30.0"
wgpu = "23.0.0"
raw-window-handle = "0.6.2"
pollster = "0.4.0"
bytemuck = { version = "1.16.0", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
fontdue = "0.9.2"
png = "0.17.16"
tiny-skia = { version = "0.11.4", optional = true }
softbuffer = { version = "0.4.6", optional = true }

[profile.release]
lto = true
opt-level = 3

# Size-optimized release profile for minimal binary size
# Use with: cargo build --profile release-small
[profile.release-small]
inherits = "release"
opt-level = "z"      # Optimize for size
lto = "fat"          # Full link-time optimization
codegen-units = 1    # Better optimization (slower compile)
panic = "abort"      # No unwinding code
strip = "symbols"    # Strip debug symbols
